--- a/build.gradle
+++ b/build.gradle
@@ -13,15 +13,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.6.1'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.1'
+
+	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.1'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2',
-			// Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
-			//'org.bouncycastle:bcprov-jdk15on:1.60',
-			'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
+			'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 test {
